Actualizar copyright: Agregar rango de años 2023-2025
- Cambiar copyright de '© 2025' a '© 2023 - 2025'
- Mantener año dinámico para el año actual
- Mejorar formato de copyright con rango de años

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
         </form>
 
         <div class="footer">
-            Copyright INM-SRECI © <span id="current-year">2025</span>
+            Copyright INM-SRECI © 2023 - <span id="current-year">2025</span>
         </div>
     </div>
 
