--- a/index.html
+++ b/index.html
@@ -39,16 +39,23 @@
         }
 
         .header h1 {
-            font-size: 38px;
+            font-size: 46px;
             color: #1a1a1a;
-            margin-bottom: 8px;
-            font-weight: 600;
+            margin-bottom: 12px;
+            font-weight: 700;
+            letter-spacing: -0.5px;
+            line-height: 1.1;
+            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         .header p {
-            font-size: 19px;
-            color: #757575;
-            font-weight: 400;
+            font-size: 20px;
+            color: #666;
+            font-weight: 500;
+            letter-spacing: 0.3px;
+            text-transform: uppercase;
+            opacity: 0.8;
+            margin-bottom: 8px;
         }
 
         .options-grid {
@@ -192,7 +199,7 @@
         }
 
         .card-title {
-            font-size: 26px;
+            font-size: 31px;
             font-weight: 600;
             color: #1a1a1a;
             margin-bottom: 8px;
@@ -209,7 +216,7 @@
         }
 
         .card-description {
-            font-size: 17px;
+            font-size: 20px;
             color: #666;
             line-height: 1.6;
             font-weight: 400;
@@ -228,7 +235,7 @@
             display: block;
             color: #888;
             font-style: italic;
-            font-size: 16px;
+            font-size: 19px;
         }
 
         .checkmark {
@@ -272,7 +279,7 @@
 
         button {
             padding: 14px 40px;
-            font-size: 19px;
+            font-size: 23px;
             font-weight: 600;
             border: none;
             border-radius: 4px;
@@ -312,7 +319,7 @@
             text-align: center;
             margin-top: 40px;
             padding-top: 20px;
-            font-size: 14px;
+            font-size: 17px;
             color: #999;
         }
 
@@ -322,7 +329,12 @@
             }
 
             .header h1 {
-                font-size: 29px;
+                font-size: 35px;
+                letter-spacing: -0.3px;
+            }
+
+            .header p {
+                font-size: 16px;
             }
 
             .options-grid {
