Actualizar texto en index.html para mayor claridad en la sección de nacionalidad. Se modificó la frase en inglés para especificar "For individuals born or naturalized, click here".

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                             <span class="spanish-text">Para nacidos o
                                 nacionalizados
                                 presione aqui</span>
-                            <span class="english-text">For Born or naturalized in Honduras click here</span>
+                            <span class="english-text">For individuals born or naturalized, click here</span>
                         </p>
                     </div>
                     <div class="checkmark"></div>
